add swagger spec
